--- a/README
+++ b/README
@@ -1,1 +1,17 @@
+Author: Stephen Lewchuk
+stephen.lewchuk@gmail.com
+Copyright 2011 Stephen Lewchuk
+
 This program is designed to perform an incremental backup of an entire directory tree.  The data is backed up only when it changes with those changes tracked with an SQLite database in the backup location.  This project is a work in progress and is provided with no guarantee.
+
+TODO: Consider ways to store diffs only, look at xdelta (http://xdelta.org/ - GPL) and bsdiff (http://www.daemonology.net/bsdiff/ - BSD Protection License)
+TODO: Build in move detection, i.e. compare added and removed to try and find identical files, try using filecmp
+TODO: Build a full commandline app
+TODO: Add a collapse command which takes a range of backup instances and removes changes so that only add/remove and a single change (the most recent) are included
+    This will be an irreversible action (though the DB entries may remain but with a new flag).  It will be used to reduce the size of a backup when being able to
+     restore backups except the most recent is not as critical.
+TODO: Add ability to roll backup back up previous version.
+TODO: Document the various abilities.
+TODO: When versions change and not running from backup, copy self to backup
+TODO: Add unit testting of basic functionality.
+
